# red-team-mcp

./: .flake8  .gitignore  DEBUGGING_IMPLEMENTATION_SUMMARY.md  DEFENSIVE_EVASION_MATRIX.md  Dockerfile  Dockerfile.debug  GPG_VERIFICATION_ANALYZER.md  README.md  SETUP.md  docker-compose.debug.yml  flake8-report.txt  mcp-config.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/agents/: DevOps-agent.md  architect-agent.md  code-linting-agent.md  code-review-agent.md  code-review-agent.md.md  code-review.md  code-writer-agent.md  debugging-agent.md  devops-agent.md  orchestrator-agent.md  secops-agent.md  static-code-analysis-agent.md  unit-tests-agent.md
.github/linters/: .policy.ini
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  python-ci.yml  verification-integrity.yml
app/: main.py
app/agents/: verification_integrity.py
app/api/: schemas.py
app/db/: models.py  session.py
app/defense/: __init__.py  api_schemas.py  control_database.py  evasion_matrix.py  models.py  technique_database.py
app/repositories/: findings.py
docs/: BRANCH_PROTECTION.md  CODE_QUALITY.md  IMPLEMENTATION_SUMMARY.md  copilot-codex-configuration-guide.md  copilot-codex-guide.md  copilot_codex_configuration_guide.md  copilot_codex_trading_bot_swarm_guide.md  debugging-guide.md  debugging-implementation-summary.md  debugging-quick-reference.md  github-copilot-codex-guide.md  red-team-agent-gpt.md  troubleshooting.md  verification-integrity.md
examples/: README.md  secure_logging_demo.py  secure_logging_example.py
scripts/: validate_debugging.py  validate_debugging.sh
src/: __init__.py  main.py  models.py  payloads.py  utils.py
src/advanced_attacks/: __init__.py  exploit_framework.py  social_engineering.py
src/devops/: __init__.py  build_env.py
src/resilience/: __init__.py  distributed_architecture.py
src/stealth/: __init__.py  traffic_obfuscation.py
src/utils/: __init__.py  secure_logger.py
src/verification/: README.md  __init__.py  apt_security.py  base.py  confidence_model.py  hardening_detector.py  provenance_checker.py  time_integrity.py  verification_integrity_agent.py
tests/: conftest.py  test_api_integration.py  test_evasion_matrix.py  test_payloads.py  test_utils.py  test_verification_agent.py
tools/: run_verification_scan.py  sarif_reporter.py  sarif_rules.json
(+4 files in other folders)
